--- a/configuration/templates/volunteering/query-hours.hbs
+++ b/configuration/templates/volunteering/query-hours.hbs
@@ -31,9 +31,9 @@
             <div class="column col-2 text-left">
               <strong>Volunteer manager</strong>
             </div>
-            {{#if task_description ~}}
+            {{#if task_role ~}}
               <div class="column col-xs-auto text-left">
-                <strong>Volunteering description</strong>
+                <strong>Volunteering role</strong>
               </div>
             {{/if ~}}
           </div>
@@ -44,9 +44,9 @@
             <div class="column col-2 text-left">
               {{volunter_manager_first_name}} {{volunteer_manager_last_name}} ({{volunteer_manager_title}})
             </div>
-            {{#if task_description ~}}
+            {{#if task_role ~}}
               <div class="column col-xs-auto text-left">
-                {{task_description}}
+                {{task_role}}
               </div>
             {{/if ~}}
           </div>
