--- a/configuration/templates/volunteering/task-testimonial-update.hbs
+++ b/configuration/templates/volunteering/task-testimonial-update.hbs
@@ -5,6 +5,7 @@
       {{{json key='location' value=@root.data.taskInfo.location}}},
       {{{json key='organisation_charity_number' value=@root.data.taskInfo.organisation_charity_number }}},
       {{{json key='un_sustainable_development_goals' value=@root.data.taskInfo.un_sustainable_development_goals}}},
+      {{{json key='task_role' value=@root.data.taskInfo.task_role}}},
       {{{json key='task_description' value=@root.data.taskInfo.task_description}}},
       {{{json key='task_id' value=@root.data.taskInfo.task_id}}},
       {{{json key='task_type' value=@root.data.taskInfo.task_type}}},
