--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -31,8 +31,8 @@
         <div class="card">
           <div class="card-header">
             <div class="card-title h5">{{organisation_name}}</div>
-            {{#if task_description ~}}
-            <div class="card-subtitle text-gray">{{truncate task_description 140}}</div>
+            {{#if task_role ~}}
+            <div class="card-subtitle text-gray">{{truncate task_role 140}}</div>
             {{/if ~}}
           </div>
           <div class="card-body">
