moved help text into

--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -77,18 +77,24 @@
         <div class="form-horizontal">
           <div class="form-group">
             <div class="column col-4 col-md-12">
-              <label for="organisation_name" class="form-label">
+              <label for="organisation_name" class="form-label popover popover-bottom">
                 {{#if @root.data.isAdmin ~}}
                 Organisation or organisations your group has volunteered with
-                <div class="caption">
-                  This information will appear on each young person's certificate so please make sure it is accurate
-                </div>
                 {{else}}
                 Organisation you volunteer with
-                <div class="caption">
-                  This information will appear on your certificate so please make sure it is accurate
-                </div>
                 {{/if ~}}
+                <span class="far fa-info-circle"></span>
+                <div class="popover-container">
+                  <div class="card">
+                    <div class="card-body">
+                      {{#if @root.data.isAdmin ~}}
+                      This information will appear on each young person's certificate so please make sure it is accurate
+                      {{else}}
+                      This information will appear on your certificate so please make sure it is accurate
+                      {{/if ~}}
+                    </div>
+                  </div>
+                </div>
               </label>
             </div>
             <div class="column col-8 col-md-12">
@@ -99,8 +105,16 @@
           </div>
           <div class="form-group">
             <div class="column col-4 col-md-12">
-              <label for="location" class="form-label">
+              <label for="location" class="form-label popover popover-bottom">
                 Location
+                <span class="far fa-info-circle"></span>
+                <div class="popover-container">
+                  <div class="card">
+                    <div class="card-body">
+                      Optional
+                    </div>
+                  </div>
+                </div>
               </label>
             </div>
             <div class="column col-8 col-md-12">
@@ -123,19 +137,25 @@
           <input autocomplete="nope" id="organisation_id" name="organisation_id" value="{{@root.data.taskInfo.organisation_id}}" type="hidden" />
           <div class="form-group">
             <div class="column col-4 col-md-12">
-              <label for="task_role" class="form-label">
-              {{#unless @root.data.isAdmin ~}}
-                My volunteer role
-                <div class="caption">
-                  This information will appear on your certificate so please make sure it is accurate
-                </div>
-              {{else}}
+              <label for="task_role" class="form-label popover popover-bottom">
+                {{#if @root.data.isAdmin ~}}
                 Volunteer role
-                <div class="caption">
-                  This can be altered on each individual certificate
+                {{else}}
+                My volunteer role
+                {{/if ~}}
+                <span class="far fa-info-circle"></span>
+                <div class="popover-container">
+                  <div class="card">
+                    <div class="card-body">
+                      {{#if @root.data.isAdmin ~}}
+                      This can be altered on each individual certificate
+                      {{else}}
+                      This information may appear on your certificate so please make sure it is accurate
+                      {{/if ~}}
+                    </div>
+                  </div>
                 </div>
-              {{/unless}}
-                </label>
+              </label>
             </div>
             <div class="column col-8 col-md-12">
               <textarea rows="4" cols="40" id="task_role" placeholder="e.g. Volunteering" name="task_role" class="form-input" value="{{@root.data.taskInfo.task_role}}" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.task_role}}></textarea>
@@ -144,10 +164,15 @@
           {{#unless @root.data.isAdmin ~}}
           <div class="form-group">
             <div class="column col-4 col-md-12">
-              <label for="task_description" class="form-label">
+              <label for="task_description" class="form-label popover popover-bottom">
                 Tell us what you have been doing in your role
-                <div class="caption">
-                  You could make a note of all the activities you have been doing, the skills and experience you have gained as well as any challenges you have faced.  You will be able to look back at this for reference and use it to as part of a CV or job application
+                <span class="far fa-info-circle"></span>
+                <div class="popover-container">
+                  <div class="card">
+                    <div class="card-body">
+                      You could make a note of all the activities you have been doing, the skills and experience you have gained as well as any challenges you have faced.  You will be able to look back at this for reference and use it to as part of a CV or job application
+                    </div>
+                  </div>
                 </div>
               </label>
             </div>
@@ -159,7 +184,7 @@
           {{#if @root.data.isAdmin ~}}
             {{!-- <div class="form-group">
               <div class="column col-4 col-md-12">
-                <label for="testimonial" class="form-label">
+                <label for="testimonial" class="form-label popover popover-bottom">
                   Let people know about your volunteers achievements with a testimonial
                   <div class="caption">
                     This will be shown on their certificates
@@ -172,8 +197,16 @@
             </div> --}}
             <div class="form-group">
               <div class="column col-4 col-md-12">
-                <label for="internal_reference" class="form-label">
+                <label for="internal_reference" class="form-label popover popover-bottom">
                   Your reference
+                  <span class="far fa-info-circle"></span>
+                  <div class="popover-container">
+                    <div class="card">
+                      <div class="card-body">
+                        This is just for your own reference and is not shown on certificates
+                      </div>
+                    </div>
+                  </div>
                 </label>
               </div>
               <div class="column col-8 col-md-12">
@@ -183,8 +216,16 @@
           {{/if}}
           <div class="form-group">
             <div class="column col-4 col-md-12">
-              <label for="un_sustainable_development_goals" class="form-label r-margin">
+              <label for="un_sustainable_development_goals" class="form-label popover popover-bottom r-margin">
                 Which UN Sustainable Development Goals does this volunteering contribute towards? (optional)
+                <span class="far fa-info-circle"></span>
+                <div class="popover-container">
+                  <div class="card">
+                    <div class="card-body">
+                      The United Nations <a href="https://next.globalgoals.org" target="_blank">Sustainable Development Goals</a> (SDGs) are key to ensuring that everyone, regardless of who you are, has access to the best possible livelihood and future. The SDGs, are a set of seventeen goals that tackle a range of issues: from improving health, ending hunger, poverty, and inequality to acting on the climate emergency that requires rapid change. The 2030 Agenda for Sustainable Development recognises volunteer groups as key stakeholders to achieve the 17 SDGs. We must all do our bit if we are to realise the ambition of the SDGs by 2030
+                    </div>
+                  </div>
+                </div>
               </label>
             </div>
             <div class="column col-8 col-md-12">
@@ -202,9 +243,6 @@
                   </li>
                   {{/each ~}}
                 </ul>
-              </div>
-              <div class="caption t-margin">
-                The United Nations <a href="https://next.globalgoals.org" target="_blank">Sustainable Development Goals</a> (SDGs) are key to ensuring that everyone, regardless of who you are, has access to the best possible livelihood and future. The SDGs, are a set of seventeen goals that tackle a range of issues: from improving health, ending hunger, poverty, and inequality to acting on the climate emergency that requires rapid change. The 2030 Agenda for Sustainable Development recognises volunteer groups as key stakeholders to achieve the 17 SDGs. We must all do our bit if we are to realise the ambition of the SDGs by 2030
               </div>
             </div>
           </div>
