--- a/configuration/partials/emails/award-authorize-body.html
+++ b/configuration/partials/emails/award-authorize-body.html
@@ -198,11 +198,15 @@
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#16204e;">
                                           <p><strong>This is a test from the new Saltire Awards service in development</strong></p>
+                                          <p>
+                                            {{#if (compare @root.request.params.query.action "===" "reminder")}}Reminder{{/if}}
+                                            {{#if (compare @root.request.params.query.action "===" "second_reminder")}}Second Reminder{{/if}}
+                                          </p>
                                           <p>Hello,</p>
                                           <p>
                                             {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}}
                                             {{#if @root.data.accountInfo.school_college_name}}from {{@root.data.accountInfo.school_college_name}}{{/if}} is applying for a {{@root.context.metaData.certificateName}} {{@root.data.verifyInfoBody.hours_verify_award}} Award. This requires TSI Authorization to be awarded. </p>
-                                          <p> Please check Salesforce hours records for this user, and set the TSI Award Authorization level to {{@root.data.verifyInfoBody.hours_verify_award}} if you wish this award to be authorized. </p>
+                                          <p> Please check Salesforce Saltire Volunteering Task records for this user, ensuring that Task Role and Description appear to fit criteria, and that organisations volunteered for and their contact emails appear to be genuine (Organisations themselves will validate the volunteers' hours). Set the TSI Award Authorization level to {{@root.data.verifyInfoBody.hours_verify_award}} if you wish this award to be authorized. </p>
                                         </div>
                                       </td>
                                     </tr>
