--- a/configuration/partials/emails/hours-verify-reminder-body.html
+++ b/configuration/partials/emails/hours-verify-reminder-body.html
@@ -210,6 +210,7 @@
                                                 {{#compare this.volunteer_manager_email "===" ../this}}
                                                   <li><strong>Volunteering</strong> for <strong>{{organisation_name}}</strong>, Manager: {{volunteer_manager_first_name}} {{volunteer_manager_last_name}} - {{volunteer_manager_title}}
                                                     <ul>
+                                                      <li>Role: {{substr task_role 0 140}}{{#compare (length task_role) '>' 140}}...{{/compare}}</li>
                                                       {{#each this.unverified_hours_list}}
                                                         <li>Hours: {{hours}} - logged on: {{momentFormat (moment createdDate "YYYY-MM-DD") "MMMM Do YYYY"}}</li>
                                                       {{/each}}
