--- a/configuration/templates/volunteering/email/verify-hours-reminder.hbs
+++ b/configuration/templates/volunteering/email/verify-hours-reminder.hbs
@@ -22,6 +22,31 @@
   {{~/blockStringify}}
   }
 {{/eachJoin ~}}
+{{#if @root.data.accountInfo.tsi_award_authorization_required}}
+  {{#compare (length @root.data.tasksInfoUnverified) ">" 0}},{{/compare}}
+
+  {
+  "from": "{{@root.context.metaData.title}} <{{@root.context.metaData.contacts.noreply}}>",
+  "h:sender": "{{@root.context.metaData.title}} <{{@root.context.metaData.contacts.noreply}}>",
+  "h:Reply-To": "{{>support_name}} <{{>support_email_address}}>",
+  {{!-- "to": "{{>support_name}} <{{>support_email_address}}>", --}}
+  "to": "anuttgens@gmail.com",
+  "o:tag": "{{{@root.route.metaData.TSIEmailType}}}",
+  "o:tracking": true,
+  "v:tasks": "{{>account_list_tasks email=this}}",
+  "tag":  "{{{@root.route.metaData.TSIEmailType}}}",
+  "id":  "{{{@root.route.metaData.TSIEmailType}}}",
+  "connectionName": {{{stringify (getProperty @root.context.metaData.emailSendSettings (concat @root.route.metaData.TSIEmailType '.mailgunConnection'))}}},
+  "subject": "TSI Authorization needed {{#compare @root.route.metaData.emailType '===' 'hours-verify-reminder'}}reminder{{/compare}}",
+  "html":
+  {{~#blockStringify this ~}}
+    {{~>
+    (getProperty @root.context.metaData.emailSendSettings (concat @root.route.metaData.TSIEmailType '.bodyPartial'))
+      this
+    ~}}
+  {{~/blockStringify}}
+  }
+{{/if}}
 ]
 {{else}}
   [
