--- a/configuration/partials/certificate/content.hbs
+++ b/configuration/partials/certificate/content.hbs
@@ -198,7 +198,7 @@
 {
   "text": "{{> sdg_number sdg=this}}: {{this}}",
   "color": "{{> sdg_color sdg=this}}",
-  "link": "https://next.globalgoals.org/{{> sdg_number sdg=this}}-{{slugify this}}",
+  "link": "https://globalgoals.org/{{> sdg_number sdg=this}}-{{slugify this}}",
   "margin": [0, 2, 0, 0],
   "style": ["volunteering_detail", "bold"]
 },
@@ -279,7 +279,7 @@
 {
   "width": 110,
   "image": "{{> certificate_images_png_global_goals}}",
-  "link": "https://next.globalgoals.org",
+  "link": "https://globalgoals.org",
   "margin": [0, 0, 0, 0],
   "absolutePosition": {
     "x": 430,
