--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -222,7 +222,7 @@
                 <div class="popover-container">
                   <div class="card">
                     <div class="card-body">
-                      The United Nations <a href="https://next.globalgoals.org" target="_blank">Sustainable Development Goals</a> (SDGs) are key to ensuring that everyone, regardless of who you are, has access to the best possible livelihood and future. The SDGs, are a set of seventeen goals that tackle a range of issues: from improving health, ending hunger, poverty, and inequality to acting on the climate emergency that requires rapid change. The 2030 Agenda for Sustainable Development recognises volunteer groups as key stakeholders to achieve the 17 SDGs. We must all do our bit if we are to realise the ambition of the SDGs by 2030
+                      The United Nations <a href="https://globalgoals.org" target="_blank">Sustainable Development Goals</a> (SDGs) are key to ensuring that everyone, regardless of who you are, has access to the best possible livelihood and future. The SDGs, are a set of seventeen goals that tackle a range of issues: from improving health, ending hunger, poverty, and inequality to acting on the climate emergency that requires rapid change. The 2030 Agenda for Sustainable Development recognises volunteer groups as key stakeholders to achieve the 17 SDGs. We must all do our bit if we are to realise the ambition of the SDGs by 2030
                     </div>
                   </div>
                 </div>
