whole load of work to make cert urls a one-stop-shop for TSIs. Sadly this makes them a one-call-per Cert issue, but it's very, very hard to cache this, as it'd be dangerous to get all of a group admins awards (they could have thousands)

--- a/configuration/templates/admin/group-awards-submit-body.hbs
+++ b/configuration/templates/admin/group-awards-submit-body.hbs
@@ -6,6 +6,7 @@
         {{#json}}
           {{{json key='task_id' value=@root.request.body.task_id}}},
           {{{json key='user_id' value=@root.data.auth.uid}}},
+          {{{json key='user_sf_id' value=@root.data.accountInfo.user_sf_id}}},
           {{{json key='award_level' value=@root.request.body.award}}},
           {{{json key='award_type' value='Group Award'}}},
           {{{json key='group_award_first_name' value=(firstItem (split this " "))}}},
