--- a/configuration/templates/admin/group-award-edit-body.hbs
+++ b/configuration/templates/admin/group-award-edit-body.hbs
@@ -4,6 +4,7 @@
     {{#json}}
       {{{json key='task_id' value=task_id}}},
       {{{json key='user_id' value=@root.data.auth.uid}}},
+      {{{json key='user_sf_id' value=@root.data.accountInfo.user_sf_id}}},
       {{{json key='award_id' value=award_id}}},
       {{{json key='award_level' value=award}}},
       {{{json key='award_type' value='Group Award'}}},
